--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Shashwat-Manglam-Jain.github.io/Ecomerse-React",
+  "homepage": "https://github.com/Shashwat-Manglam-Jain/Ecomerse-React.git",
   "name": "website",
   "private": true,
   "version": "0.0.0",
