--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Shashwat-Manglam-Jain/Ecomerse-React.git",
+  "homepage": "https://Shashwat-Manglam-jain.github.io/Ecomerse-React",
   "name": "website",
   "private": true,
   "version": "0.0.0",
@@ -7,11 +7,10 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
-
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "dependencies": {
     "gh-pages": "^6.0.0",
